# sample

./: COPYING  README.markdown  Sample.hs  Variates.hs  sample.cabal
src/: Sample.hs  Variates.hs
